# leapfrogai-backend-rag

./: .env.example  .gitignore  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: dev-docker-build-push-amd64 copy.yaml  dev-docker-build-push-amd64.yaml  pytest.yaml  release-dev.yaml  release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  uds-package.yaml  vs.yaml
chart/templates/rag/: deployment.yaml  service.yaml
src/: document_store.py  embedding_functions.py  embeddings.py  ingest.py  main.py
src/pkg_resources/: __init__.py
src/utils/: helpers.py  types.py
tests/: test_main.py
tools/: cache_embeddings.py  cache_tokenizer.py
